fix cart z-index

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,5 +1,5 @@
 .header {
-    z-index: 99999999999999999999999999999999999999999999999999999999 !important;
+    z-index: 9999999999999999999999999999 !important;
     height: 2rem;
     padding: 2.5rem 1rem 3rem 3rem;
     display: flex;
@@ -62,7 +62,7 @@
 
 .cart {
     padding: 1rem 2rem;
-    z-index: 9009999999999999999999000 !important;
+    z-index: 900999999999999999999999999999999999000 !important;
     position: absolute;
     display: flex;
     flex-direction: column;
